--- a/app/src/main/res/layout/signup_car_info_fragment.xml
+++ b/app/src/main/res/layout/signup_car_info_fragment.xml
@@ -1,119 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:orientation="vertical">
+    tools:context=".view.driver.signup.DriverSignupActivity">
 
-    <TextView
+
+    <ScrollView
+        android:id="@+id/main_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="15dp"
-        android:fontFamily="@font/roboto"
-        android:text="@string/carInfo"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toTopOf="@+id/next_btn_layout"
+        app:layout_constraintTop_toTopOf="parent">
 
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="15dp"
-        android:hint="@string/carName"
-        app:hintTextColor="#000000">
-
-        <EditText
-            android:id="@+id/car_name"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_et_selector"
-            android:cursorVisible="true"
-            android:hint="@string/carName"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            android:singleLine="true"
-            android:textColor="@android:color/black"
-            android:textColorHint="#60000000"
-            android:textCursorDrawable="@drawable/bg_color_cursor"
-            android:textSize="16sp" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="0dp"
+            android:paddingBottom="30dp"
+            android:orientation="vertical">
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="15dp"
-        android:hint="@string/carModel"
-        app:hintTextColor="#000000">
-
-        <EditText
-            android:id="@+id/car_model"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_et_selector"
-            android:cursorVisible="true"
-            android:hint="@string/carModel"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            android:singleLine="true"
-            android:textColor="@android:color/black"
-            android:textColorHint="#60000000"
-            android:textCursorDrawable="@drawable/bg_color_cursor"
-            android:textSize="16sp" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="15dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/carInfo"
+                android:textColor="@android:color/black"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="15dp"
-        android:hint="@string/car_number"
-        app:hintTextColor="#000000">
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/car_name_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="15dp"
+                android:hint="@string/carName"
+                app:hintTextColor="#000000">
 
-        <EditText
-            android:id="@+id/car_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_et_selector"
-            android:cursorVisible="true"
-            android:hint="@string/car_number"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            android:singleLine="true"
-            android:textColor="@android:color/black"
-            android:textColorHint="#60000000"
-            android:textCursorDrawable="@drawable/bg_color_cursor"
-            android:textSize="16sp" />
+                <EditText
+                    android:id="@+id/car_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_et_selector"
+                    android:cursorVisible="true"
+                    android:hint="@string/carName"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"
+                    android:textColorHint="#60000000"
+                    android:textCursorDrawable="@drawable/bg_color_cursor"
+                    android:textSize="16sp" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/car_model_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="15dp"
+                android:hint="@string/carModel"
+                app:hintTextColor="#000000">
+
+                <EditText
+                    android:id="@+id/car_model"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_et_selector"
+                    android:cursorVisible="true"
+                    android:hint="@string/carModel"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"
+                    android:textColorHint="#60000000"
+                    android:textCursorDrawable="@drawable/bg_color_cursor"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/car_number_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="15dp"
+                android:hint="@string/car_number"
+                app:hintTextColor="#000000">
+
+                <EditText
+                    android:id="@+id/car_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_et_selector"
+                    android:cursorVisible="true"
+                    android:hint="@string/car_number"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"
+                    android:textColorHint="#60000000"
+                    android:textCursorDrawable="@drawable/bg_color_cursor"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+        </LinearLayout>
+
+    </ScrollView>
 
 
     <LinearLayout
-
+        android:id="@+id/next_btn_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.95"
-        android:gravity="bottom"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:elevation="10dp"
+        android:orientation="vertical"
+        android:translationZ="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_layout">
 
         <Button
             android:id="@+id/next_btn"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/bg_btn_gray"
@@ -124,5 +155,4 @@
 
     </LinearLayout>
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
