--- a/app/src/main/res/layout/order_track_ride_layout.xml
+++ b/app/src/main/res/layout/order_track_ride_layout.xml
@@ -32,8 +32,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="@font/roboto"
-                android:gravity="center"
                 android:text="@string/waitPassanger"
+                android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="22sp" />
 
@@ -214,6 +214,7 @@
 
 
                     <LinearLayout
+                        android:id="@+id/phone_call_layout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -241,8 +242,10 @@
 
 
                     <RelativeLayout
+                        android:id="@+id/message_layout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="15dp"
                         android:orientation="vertical">
 
                         <ImageButton
@@ -252,7 +255,7 @@
                             android:layout_centerHorizontal="true"
                             android:layout_marginStart="15dp"
                             android:layout_marginTop="15dp"
-                            android:layout_marginEnd="20dp"
+                            android:layout_marginEnd="15dp"
                             android:background="@drawable/bg_back_btn"
                             android:elevation="7dp"
                             android:src="@drawable/ic_message_driver" />
@@ -280,8 +283,10 @@
 
 
                     <LinearLayout
+                        android:id="@+id/navigator_layout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="15dp"
                         android:orientation="vertical"
                         android:visibility="gone">
 
