--- a/app/src/main/res/layout/regular_drive_fragment.xml
+++ b/app/src/main/res/layout/regular_drive_fragment.xml
@@ -50,13 +50,13 @@
                         android:id="@+id/tabs"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:background="@color/colorBlue"
+                        android:background="@android:color/white"
                         app:tabGravity="fill"
-                        app:tabIndicatorColor="@android:color/white"
+                        app:tabIndicatorColor="@color/colorBlue"
                         app:tabIndicatorHeight="3dp"
                         app:tabMode="fixed"
-                        app:tabSelectedTextColor="@android:color/white"
-                        app:tabTextColor="#50FFFFFF" />
+                        app:tabSelectedTextColor="@color/colorBlue"
+                        app:tabTextColor="#868686" />
                 </com.google.android.material.appbar.AppBarLayout>
 
                 <androidx.viewpager.widget.ViewPager
