--- a/app/src/main/res/layout/profile_detail_activity.xml
+++ b/app/src/main/res/layout/profile_detail_activity.xml
@@ -18,7 +18,6 @@
         android:elevation="1px"
         android:fontFamily="@font/roboto"
         android:padding="10dp"
-        android:text="@string/dataSaved"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="14sp"
@@ -321,6 +320,7 @@
                             android:textSize="16sp" />
 
                         <androidx.appcompat.widget.SwitchCompat
+                            android:checked="true"
                             android:id="@+id/notifications_switch"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -516,6 +516,28 @@
             android:visibility="gone" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+    <View
+        android:id="@+id/on_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.7"
+        android:background="@android:color/white"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="gone" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/CustomProgressBar"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
