--- a/app/src/main/res/layout/rate_layout.xml
+++ b/app/src/main/res/layout/rate_layout.xml
@@ -56,6 +56,39 @@
             android:textColor="@android:color/black"
             android:textSize="14sp" />
 
+
+        <TextView
+            android:id="@+id/price_for_ride"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:text="320"
+            android:textColor="@android:color/black"
+            android:textSize="32sp"
+            android:textStyle="bold" />
+
+
+        <ImageView
+            android:id="@+id/plus_wating_fee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_plus"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/wating_fee"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:visibility="gone" />
+
+
         <bonch.dev.presentation.base.RatingBar
             android:id="@+id/rating_bar"
             android:layout_width="wrap_content"
