--- a/app/src/main/res/layout/regular_create_ride_layout.xml
+++ b/app/src/main/res/layout/regular_create_ride_layout.xml
@@ -5,25 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/general_notification"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:alpha="0.0"
-        android:background="@drawable/bg_notification"
-        android:elevation="1px"
-        android:fontFamily="@font/roboto"
-        android:padding="10dp"
-        android:textAlignment="center"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
-        android:translationZ="15dp" />
-
-    <com.yandex.mapkit.mapview.MapView
-        android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
     <ImageButton
         android:id="@+id/back_btn"
@@ -147,40 +128,6 @@
 
         </LinearLayout>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/select_date"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:drawableEnd="@drawable/ic_arrow_right"
-                android:drawablePadding="10dp"
-                android:gravity="center_vertical"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp"
-                android:text="@string/selectDate"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/select_time"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:drawableEnd="@drawable/ic_arrow_right"
-                android:drawablePadding="10dp"
-                android:gravity="center_vertical"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp"
-                android:text="@string/selectTime"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -197,7 +144,7 @@
                 android:layout_weight="1"
                 android:drawableStart="@drawable/ic_ruble"
                 android:drawablePadding="20dp"
-                android:paddingTop="5dp"
+                android:paddingTop="12dp"
                 android:paddingBottom="20dp"
                 android:text="@string/offer_price"
                 android:textColor="#50000000"
@@ -212,6 +159,47 @@
                 android:src="@drawable/ic_info_price"
                 android:visibility="gone" />
 
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#30000000" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/select_date"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:drawableEnd="@drawable/ic_arrow_right"
+                android:drawablePadding="10dp"
+                android:gravity="center_vertical"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:layout_marginTop="7dp"
+                android:text="@string/selectDate"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/select_time"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:drawableEnd="@drawable/ic_arrow_right"
+                android:drawablePadding="10dp"
+                android:gravity="center_vertical"
+                android:paddingStart="15dp"
+                android:layout_marginBottom="7dp"
+                android:paddingEnd="15dp"
+                android:text="@string/selectTime"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
         </LinearLayout>
 
 
