--- a/app/src/main/res/layout/regular_create_ride_layout.xml
+++ b/app/src/main/res/layout/regular_create_ride_layout.xml
@@ -145,7 +145,7 @@
                 android:drawableStart="@drawable/ic_ruble"
                 android:drawablePadding="20dp"
                 android:paddingTop="12dp"
-                android:paddingBottom="20dp"
+                android:paddingBottom="25dp"
                 android:text="@string/offer_price"
                 android:textColor="#50000000"
                 android:textSize="14sp" />
@@ -154,7 +154,7 @@
                 android:id="@+id/info_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="3dp"
                 android:background="@android:color/white"
                 android:src="@drawable/ic_info_price"
                 android:visibility="gone" />
@@ -177,12 +177,12 @@
                 android:id="@+id/select_date"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginTop="7dp"
                 android:drawableEnd="@drawable/ic_arrow_right"
                 android:drawablePadding="10dp"
                 android:gravity="center_vertical"
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
-                android:layout_marginTop="7dp"
                 android:text="@string/selectDate"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
@@ -191,11 +191,11 @@
                 android:id="@+id/select_time"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginBottom="7dp"
                 android:drawableEnd="@drawable/ic_arrow_right"
                 android:drawablePadding="10dp"
                 android:gravity="center_vertical"
                 android:paddingStart="15dp"
-                android:layout_marginBottom="7dp"
                 android:paddingEnd="15dp"
                 android:text="@string/selectTime"
                 android:textColor="@android:color/black"
@@ -387,6 +387,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="70dp"
+                android:layout_marginTop="15dp"
                 app:picker_curved="true"
                 app:picker_displayDays="false"
                 app:picker_displayDaysOfMonth="false"
@@ -400,6 +401,22 @@
                 app:picker_stepSizeMinutes="5"
                 app:picker_textSize="40sp"
                 app:picker_visibleItemCount="5" />
+
+
+            <Button
+                android:id="@+id/save_time"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/bg_btn_blue"
+                android:fontFamily="@font/roboto"
+                android:shadowColor="@color/colorBlue"
+                android:text="@string/saveC"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
 
 
         </LinearLayout>
@@ -430,6 +447,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="10dp"
                 android:drawableEnd="@drawable/ic_tick"
                 android:fontFamily="@font/roboto"
                 android:paddingTop="20dp"
@@ -829,7 +847,8 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginTop="15dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
