--- a/app/src/main/res/layout/detail_order_layout.xml
+++ b/app/src/main/res/layout/detail_order_layout.xml
@@ -15,6 +15,36 @@
         android:visibility="gone">
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="90dp">
+
+            <View
+                android:id="@+id/circle1"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="18dp"
+                android:background="@drawable/bg_loading_circle" />
+
+            <View
+                android:id="@+id/circle2"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="18dp"
+                android:background="@drawable/bg_loading_circle" />
+
+            <View
+                android:id="@+id/circle3"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="18dp"
+                android:background="@drawable/bg_loading_circle" />
+        </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,7 +66,7 @@
             android:layout_marginBottom="20dp"
             android:background="@drawable/bg_btn_black"
             android:fontFamily="@font/roboto"
-            android:text="@string/cancelRide"
+            android:text="@string/cancelC"
             android:textAllCaps="false"
             android:textSize="16sp" />
 
