--- a/app/src/main/res/layout/detail_order_layout.xml
+++ b/app/src/main/res/layout/detail_order_layout.xml
@@ -57,7 +57,7 @@
 
 
         <Button
-            android:id="@+id/cancel_ride"
+            android:id="@+id/cancel_offer"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
