--- a/app/src/main/res/layout/order_track_ride_layout.xml
+++ b/app/src/main/res/layout/order_track_ride_layout.xml
@@ -484,11 +484,36 @@
                 android:textSize="24sp" />
 
 
+            <TextView
+                android:id="@+id/text_payment_for_cancel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/paymentForCancel"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/payment_sum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:fontFamily="@font/roboto"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+
             <Button
                 android:id="@+id/ok_btn"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/bg_btn_blue"
                 android:fontFamily="@font/roboto"
