--- a/app/src/main/res/layout/detail_order_layout.xml
+++ b/app/src/main/res/layout/detail_order_layout.xml
@@ -250,20 +250,36 @@
         </LinearLayout>
 
 
-        <Button
-            android:id="@+id/confirm_with_price"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="15dp"
-            android:background="@drawable/bg_btn_blue"
-            android:fontFamily="@font/roboto"
-            android:shadowColor="@color/colorBlue"
-            android:text="@string/agreeWithPrice"
-            android:textAllCaps="false"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/confirm_with_price"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/bg_btn_blue"
+                android:fontFamily="@font/roboto"
+                android:shadowColor="@color/colorBlue"
+                android:text="@string/agreeWithPrice"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:elevation="10dp"
+                android:theme="@style/WhiteProgressBar"
+                android:visibility="gone" />
+
+        </RelativeLayout>
 
         <Button
             android:id="@+id/offer_price"
