--- a/app/src/main/res/layout/detail_ride_layout.xml
+++ b/app/src/main/res/layout/detail_ride_layout.xml
@@ -259,19 +259,34 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/get_driver_btn"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/bg_btn_gray"
-            android:fontFamily="@font/roboto"
-            android:shadowColor="@color/colorBlue"
-            android:text="@string/getDriver"
-            android:textAllCaps="false"
-            android:textSize="16sp" />
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/get_driver_btn"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/bg_btn_gray"
+                android:fontFamily="@font/roboto"
+                android:shadowColor="@color/colorBlue"
+                android:text="@string/getDriver"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="2dp"
+                android:elevation="10dp"
+                android:theme="@style/WhiteProgressBar"
+                android:visibility="gone" />
+        </RelativeLayout>
 
 
     </LinearLayout>
