--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,10 @@
         <item name="colorAccent">@color/colorBlue</item>
     </style>
 
+    <style name="WhiteProgressBar" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@android:color/white</item>
+    </style>
+
     <style name="SplashTheme" parent="@style/Theme.Design.NoActionBar">
         <item name="android:windowNoTitle">true</item>
         <item name="android:statusBarColor">@color/colorStatusBar</item>
